# grunge-football

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  test.db
backend/app/: config.py  main.py  schemas.py
backend/app/ai_bots/: __init__.py
backend/app/ai_bots/openai/: chatgpt_bot.py
backend/app/ai_bots/sonnet/: anthropic_wrapper.py  sonnet_ai_bot.py
backend/app/api/: __init__.py  admin.py  bet.py  dependencies.py  game.py  tournament.py  user.py
backend/app/api/crud/: team.py
backend/app/api/routers/: admin.py  bet.py  data.py  game.py  team.py  tournament.py  user.py
backend/app/core/: security.py
backend/app/db/: database.py  reset_db.py  test.db
backend/app/football_data/: api.py
backend/app/mail/: send.py
backend/app/models/: admin.py  area.py  bet.py  game.py  prize.py  team.py  tournament.py  user.py
backend/app/notifications/: email.py  html.py  send.py  tg.py
backend/app/schemas/: admin.py  bet.py  game.py  prize.py  team.py  tournament.py  user.py
backend/app/tests/: conftest.py  test_create_tournament.py
backend/app/utils/: bet_utils.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/backup/: KHwtKjoULp0vXwH9k copy.html  lHiwnX6PFoV09XZXI copy.html  qj7DGrumB20PTeEpi copy.html  tvgLxkRDJB8ZgyLx1 copy.html  zXk1fvrYfl6QUjXe0 copy.html
frontend/pages/: account.html  admin.html  signin.html  signup.html
react_frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
react_frontend/public/: index.html
react_frontend/src/: App.css  App.js  index.css  (+1 more)
(+22 files in other folders)
