[tool.poetry]
name = "Grunge Football"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Yuri Perin <yupasik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
alembic = "^1.7.0"
psycopg2-binary = "^2.9.1"
email-validator = "^2.2.0"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
