[tool.poetry]
name = "Grunge Football"
version = "0.2.0"
description = ""
package-mode = false
authors = ["Yuri Perin <yupasik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
alembic = "^1.7.0"
psycopg2-binary = "^2.9.1"
email-validator = "^2.2.0"
bcrypt = "^4.2.0"
fastapi-mail = "^1.4.1"
python-telegram-bot = "^21.4"
pyyaml = "^6.0.2"
apscheduler = "^3.10.4"
httpx = "^0.27.0"
setuptools = "^74.0.0"
anthropic = "^0.34.2"
openai = "^1.44.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pyright = "^1.1.377"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
